--- a/src/css/HomePage.module.css
+++ b/src/css/HomePage.module.css
@@ -11,7 +11,7 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color: #eff6fc;
+  background-color: #a9b5df;
   padding: 30px;
   justify-content: space-evenly;
 }
